learn-DevOps/kubernetes/CKAD-exam/services/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      
      labels:
        app: frontend
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
